--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	<p><small>&copy; slitayem 2017</small></p>
 	</div>
 	<div class="col-sm-4">
-	<p class="pull-right"><small><a href="/about" title="About this site">About this site</a></small></p>
+	<p class="pull-right"><small><a href="/about" title="About">About this site</a></small></p>
 	</div>
 	</div>
 </div> <!-- /footer -->
