--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>{{ page.title }} | Saloua Litayem | Data engineer | Data scientist.</title>		
+	<title>{{ page.title }} | Saloua Litayem | Senior Machine Learning Engineer | Data scientist.</title>
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
@@ -18,5 +18,5 @@
   <script src="../../assets/js/respond.min.js"></script>
 	<![endif]-->
 	<!-- google analytics - i will not share this data with google -->
-	{% include analytics.html %}	
+	{% include analytics.html %}
 </head>
