--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,8 +22,8 @@ notes: active
 			<hr>
 
 			<!-- Post comments -->
-			<div class="notecomments">
+			<!-- <div class="notecomments">
 				{% include disqus.html %}	 
-			</div>
+			</div> -->
 		</div><!-- / .note .single -->
 </div><!-- /.notes -->
