--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,10 @@
 layout: default
 notes: active
 ---
-
 <div class="notes">
 		<div class="note single">
 			<h1 class="title">{{ page.title }}</h1>
-			
+			{% include reading-time.html %}
 			<h2 class="date"><info datetime="{{ page.date }}">
 				{{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
 			</info></h2>
