--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,12 @@
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
-	
+	<!-- include Font Awesome available in https://cdnjs.com/libraries/font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+		crossorigin="anonymous"
+		referrerpolicy="no-referrer" />
+
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
   <script src="../../assets/js/html5shiv.js"></script>
