--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
+<head>
+{% include ga4.html %}
+</head>
 <html lang="en">
 	
 	{% include head.html %}
 	
 	<body>
 		<div class="container">
-			
+
 			{% include header.html %}
-			
+
 			{{ content }}
-			
+
 			{% include footer.html %}
-		
+
 		</div> <!-- /container -->
-	
-	
+
 		{% include scripts.html %}
-	
+
 	</body>
 
 </html>
